[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
bevy_mod_picking = "0.12.0"
lazy_static = "1.4.0"
noise = "0.8.2"
rand = "0.8.5"
